new sub project added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,31 @@
   </div>
   <div class="row text-center justify-content-center">
     <div class="col-md-4">
-      <img class="img-thumbnail home-img" src="1.jpeg" alt="">
+      <div class="card bg-primary" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-header">Project-1</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
     <div class="col-md-4">
-      <img class="img-thumbnail home-img" src="2.jpeg" alt="">
+      <div class="card bg-primary" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-header">Project-2</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="Bootstrap-1/index.html" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
     <div class="col-md-4">
-      <img class="img-thumbnail home-img" src="2.jpeg" alt="">
+      <div class="card bg-primary" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-header">Project-3</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
     </div>
 
   </div>
