--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="card-body">
           <h5 class="card-header">Project-1</h5>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="Bootstrap-1/index.html" class="btn btn-primary">Go somewhere</a>
+          <a href="Bootstrap-1/index.html" class="btn btn-primary">View Project</a>
         </div>
       </div>
     </div>
