--- a/Bootstrap-1/index.html
+++ b/Bootstrap-1/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Revalia" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet">
   <link rel="stylesheet" href="style.css"/>
   <title>Document</title>
 </head>
