new image added in card

--- a/index.html
+++ b/index.html
@@ -12,36 +12,39 @@
 <body>
 
 <div class="container">
-  <div class="row justify-content-center text-center rowHeight">
-    <div class="col-md-4 align-self-center bg">
-      <h1>Code is Awesome</h1>
+  <div class="row text-center heading">
+    <div class="col-sm-12 align-self-center">
+      <h1>Welcome to my Project Repository!!!</h1>
     </div>
   </div>
-  <div class="row text-center justify-content-center">
-    <div class="col-md-4">
-      <div class="card bg-primary" style="width: 18rem;">
+  <div class="row text-center heading">
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
+        <div class="card-header">Project-1</div>
+        <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-header">Project-1</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="Bootstrap-1/index.html" class="btn btn-primary">View Project</a>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-warning">View Project</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card bg-primary" style="width: 18rem;">
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
+        <div class="card-header">Project-2</div>
+        <img class="card-img-top project-icon" src="1.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-header">Project-2</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="Bootstrap-1/index.html" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-warning">View Project</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card bg-primary" style="width: 18rem;">
+    <div class="col-sm-4">
+      <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
+        <div class="card-header">Project-3</div>
+        <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-header">Project-3</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-warning">View Project</a>
         </div>
       </div>
     </div>
