--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-warning">View Project</a>
+          <a href="Bootstrap-1/index.html" class="btn btn-warning">View Project</a>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
         <img class="card-img-top project-icon" src="1.jpeg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-warning">View Project</a>
+          <a href="Bootstrap-2/index.html" class="btn btn-warning">View Project</a>
         </div>
       </div>
     </div>
