adding more data

--- a/Bootstrap-2/index.html
+++ b/Bootstrap-2/index.html
@@ -48,11 +48,16 @@
     </div>
     <div class="col-sm-3"></div>
   </div>
-  <div class="row text-center heading">
-    <div class="col-sm-12 align-self-center">
-      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi architecto ab fugiat molestiae voluptas. Illum impedit repellendus amet, quasi neque!</h1>
-      <h2 class="font-italic">The man who saved a billions lives</h2>
+  <div class="row heading">
+    <div class="col-sm-3"></div>
+    <div class="col-sm-6 ">
+      <blockquote>
+        <p class="block">"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</p>
+        <cite> -Indian Prime Minister Manmohan Singh</cite>
+      </blockquote>
+      <h4>If you have time, you should read more about this incredible human being on his <a href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry</a>.</h4>
     </div>
+    <div class="col-sm-3"></div>
   </div>
 </div>
 <div class="container">
