--- a/MyWebsite/index.html
+++ b/MyWebsite/index.html
@@ -12,7 +12,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
+    <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" href="#">
         <img src="images/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
       Portfolio
