--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="row text-center heading">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
         <div class="card-header">Project-1</div>
         <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
@@ -28,7 +28,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
         <div class="card-header">Project-2</div>
         <img class="card-img-top project-icon" src="1.jpeg" alt="Card image cap">
@@ -38,7 +38,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
         <div class="card-header">Project-3</div>
         <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
@@ -48,7 +48,16 @@
         </div>
       </div>
     </div>
-
+    <div class="col-sm-3">
+      <div class="card text-white bg-dark mb-3 project-card" style="max-width: 18rem;">
+        <div class="card-header">Project-3</div>
+        <img class="card-img-top project-icon" src="2.jpeg" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-warning">View Project</a>
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
